# ProjectStarter

./: .gitignore  About.h.in  CMakeLists.txt  conanfile.txt
src/main/: App.hpp  CMakeLists.txt  CmdParser.ixx  Generator.hpp  ProjMaker.ixx  ProjectVariables.hpp  main.cpp  utility.ixx
